Add hint to form in test html

--- a/test/index.html
+++ b/test/index.html
@@ -5,8 +5,8 @@
 <body>
   <form id="form" enctype="multipart/form-data">
     <input type="file" name="epub" />
-    <input type="text" name="width" value="400" />
-    <input type="text" name="height" value="400" />
+    <input type="text" name="width" placeholder="Desired width" value="400" />
+    <input type="text" name="height" placeholder="Desired height" value="400" />
 
     <input type="submit" />
   </form>
